---------------------------------------------------------------------------------------------------
Version: 1.16.5
Date: 2022-12-20

  Bugfixes:
    - Fixed a crash when logistic robot spawn in vanilla biter feature group.

---------------------------------------------------------------------------------------------------
Version: 1.16.4
Date: 2022-12-19

  Bugfixes:
    - Fixed a multiplayer issue, mod-enemyracemanager was registered for the following events when the map was saved but has not re-registered them as a result of loading: on_entity_spawned.

---------------------------------------------------------------------------------------------------
Version: 1.16.3
Date: 2022-12-19

  Bugfixes:
    - Fixed that nuking the boss can kill the player vision.
    - Fixed a tab handler crash with LTN management window.
    - Fixed a crash caused by post process mod was treated as an enemy race in 1 race / surface configuration.

---------------------------------------------------------------------------------------------------
Version: 1.16.2
Date: 2022-12-16

  Bugfixes:
    - Fix a crash when launching Psi tracking satellite.

---------------------------------------------------------------------------------------------------
Version: 1.16.1
Date: 2022-12-16

  Changes:
    - "construction bot not repairable" always apply, regardless of defense enhance option.

  Bugfixes:
    - Fix a crash when spawn a boss on a not supported race.

---------------------------------------------------------------------------------------------------
Version: 1.16.0
Date: 2022-12-12

  Major Features:
    - ----- Boss Framework (Proof of Concept release) -----
    - Boss spawner is revealed by launching a "Psi Tracking Satellite".
    - Currently only supported by **erm_zerg** and **erm_protoss**. Plan to support all races when it's out of POC phase.
    - The goal of this mode is time trail boss fight and of course, to rekt your base.